Refactored SizeImpl toString method